# pluginator

./: .gitignore  README.md  main.c  meson.build  meson_options.txt  pluginator.c  pluginator.h
subprojects/: hashmap_c.wrap
subprojects/packagefiles/hashmap_c/: meson.build
tests/: meson.build
tests/basic/: basic_plugin.c  meson.build  test.c
tests/basic_dispatch/: meson.build  plugin.c  test.c
tests/no_dispatch_function_error_handling/: meson.build  plugin.c  test.c
tests/no_plugin_error_handling/: meson.build  test.c
